--- a/11.DOM-Manipulations-Lab/06. Highlight-Active/index.html
+++ b/11.DOM-Manipulations-Lab/06. Highlight-Active/index.html
@@ -1,6 +1,3 @@
-<!--Problems for in-class lab for the “JavaScript Advanced” course @ SoftUni.
-Submit your solutions in the SoftUni judge system at https://judge.softuni.bg/Contests/1549/Lab-DOM-Manipulations -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,5 +25,5 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.bg/Co
         </div>
     </div>
     <script src="./app.js"></script>
-
+</body>
 </html>
